--- a/Instruções_Energia_MHS.ipynb
+++ b/Instruções_Energia_MHS.ipynb
@@ -135,8 +135,8 @@
       "source": [
         "def x(t):\n",
         "    return Ao*np.cos(w*t+fi)  \n",
-        "def x2(t):\n",
-        "    return Ao*np.sin(w*t+fi)"
+        "def v(t):\n",
+        "    return -w*Ao*np.sin(w*t+fi)"
       ],
       "metadata": {
         "id": "LUYeI-7eXkHb"
@@ -178,7 +178,7 @@
       "cell_type": "code",
       "source": [
         "def ec(t):\n",
-        "    return 1/2*k*x2(t)**2"
+        "    return 1/2*m*v(t)**2"
       ],
       "metadata": {
         "id": "Oddr0vBMXvM1"
