--- a/Simulação_Energia_MHS.ipynb
+++ b/Simulação_Energia_MHS.ipynb
@@ -69,8 +69,8 @@
         "#Funções que calculam a posição em função do tempo (equação da posição) \n",
         "def x(t):\n",
         "    return Ao*np.cos(w*t+fi)  \n",
-        "def x2(t):\n",
-        "    return Ao*np.sin(w*t+fi)\n",
+        "def v(t):\n",
+        "    return -w*Ao*np.sin(w*t+fi)\n",
         "\n",
         "#Função que calcula a energia potencial com base no sistema massa-mola\n",
         "def ep(t):\n",
@@ -78,7 +78,7 @@
         "\n",
         "#Função que calcula a energia cinética com base no sistema massa-mola\n",
         "def ec(t):\n",
-        "    return 1/2*k*x2(t)**2\n",
+        "    return 1/2*m*v(t)**2\n",
         "\n",
         "print('------------------------------------------------------')\n",
         "\n",
